--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,6 @@
 /3_Code/SNU_v3/src/snu_module/scripts4/config/
 /3_Code/SNU_v3/src/snu_module/scripts4/config(deprecated)
 /3_Code/SNU_v3/src/snu_module/scripts4/obsoletes/
+
+# Hide Script5
+/3_Code/SNU_v3/src/snu_module/scripts5/
